--- a/pom.xml
+++ b/pom.xml
@@ -13,137 +13,146 @@
   the specific language governing permissions and limitations under the
   License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <!-- Not necessary for your build: -->
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.michaelxu.oryx</groupId>
-  <artifactId>myoryx-lr</artifactId>
-  <packaging>jar</packaging>
-  <name>myoryx-lr</name>
-  <description>oryx logistic regression</description>
-  <version>1.0.0</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <!-- Not necessary for your build: -->
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.michaelxu.oryx</groupId>
+    <artifactId>myoryx-lr</artifactId>
+    <packaging>jar</packaging>
+    <name>myoryx-lr</name>
+    <description>oryx logistic regression</description>
+    <version>1.0.0</version>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <scope>provided</scope>
-      <version>2.11.8</version>
-    </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <scope>provided</scope>
+            <version>2.11.8</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scalap</artifactId>
-      <scope>provided</scope>
-      <version>2.11.8</version>
-    </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scalap</artifactId>
+            <scope>provided</scope>
+            <version>2.11.8</version>
+        </dependency>
 
-    <dependency>
-      <groupId>com.cloudera.oryx</groupId>
-      <artifactId>oryx-api</artifactId>
-      <scope>provided</scope>
-      <version>2.4.1</version>
-    </dependency>
+        <dependency>
+            <groupId>com.cloudera.oryx</groupId>
+            <artifactId>oryx-api</artifactId>
+            <scope>provided</scope>
+            <version>2.4.1</version>
+        </dependency>
 
-    <dependency>
-      <groupId>com.cloudera.oryx</groupId>
-      <artifactId>oryx-ml</artifactId>
-      <scope>provided</scope>
-      <version>2.4.1</version>
-    </dependency>
+        <dependency>
+            <groupId>com.cloudera.oryx</groupId>
+            <artifactId>oryx-ml</artifactId>
+            <scope>provided</scope>
+            <version>2.4.1</version>
+        </dependency>
 
-    <dependency>
-      <groupId>com.cloudera.oryx</groupId>
-      <artifactId>oryx-common</artifactId>
-      <scope>provided</scope>
-      <version>2.4.1</version>
-    </dependency>
+        <dependency>
+            <groupId>com.cloudera.oryx</groupId>
+            <artifactId>oryx-common</artifactId>
+            <scope>provided</scope>
+            <version>2.4.1</version>
+        </dependency>
 
-    <dependency>
-      <groupId>com.cloudera.oryx</groupId>
-      <artifactId>oryx-app-common</artifactId>
-     <scope>provided</scope>
-      <version>2.4.1</version>
-    </dependency>
+        <dependency>
+            <groupId>com.cloudera.oryx</groupId>
+            <artifactId>oryx-app-common</artifactId>
+            <scope>provided</scope>
+            <version>2.4.1</version>
+        </dependency>
 
-    <dependency>
-      <groupId>com.cloudera.oryx</groupId>
-      <artifactId>oryx-app-serving</artifactId>
-      <scope>provided</scope>
-      <version>2.4.1</version>
-    </dependency>
+        <dependency>
+            <groupId>com.cloudera.oryx</groupId>
+            <artifactId>oryx-app-serving</artifactId>
+            <scope>provided</scope>
+            <version>2.4.1</version>
+        </dependency>
 
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
-      <version>2.0.1</version>
-    </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
-    <!--
-      Use this only if you use APIs specific to the project's provided
-      application implementations, like the ALS Rescorer interface
-     -->
-    <dependency>
-      <groupId>com.cloudera.oryx</groupId>
-      <artifactId>oryx-app-api</artifactId>
-      <scope>provided</scope>
-      <version>2.4.1</version>
-    </dependency>
+        <!--
+          Use this only if you use APIs specific to the project's provided
+          application implementations, like the ALS Rescorer interface
+         -->
+        <dependency>
+            <groupId>com.cloudera.oryx</groupId>
+            <artifactId>oryx-app-api</artifactId>
+            <scope>provided</scope>
+            <version>2.4.1</version>
+        </dependency>
 
-    <!-- optional, but would enable some native acceleration -->
-    <dependency>
-      <groupId>com.github.fommil.netlib</groupId>
-      <artifactId>all</artifactId>
-      <version>1.1.2</version>
-      <type>pom</type>
-    </dependency>
+        <!-- optional, but would enable some native acceleration -->
+        <dependency>
+            <groupId>com.github.fommil.netlib</groupId>
+            <artifactId>all</artifactId>
+            <version>1.1.2</version>
+            <type>pom</type>
+        </dependency>
 
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-mllib_2.11</artifactId>
-      <version>${spark.version}</version>
-      <scope>provided</scope>
-    </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.11</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
-  </dependencies>
+    </dependencies>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spark.version>2.1.1</spark.version>
-    <java.version>1.8</java.version>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spark.version>2.1.1</spark.version>
+        <java.version>1.8</java.version>
+    </properties>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-        </configuration>
-      </plugin>
-      <!-- Use scala compiler only if using Scala APIs -->
-      <plugin>
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.2</version>
-        <configuration>
-          <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
-        </configuration>
-        <executions>
-          <execution>
-            <id>scala-compile-first</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>add-source</goal>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <!-- Use scala compiler only if using Scala APIs -->
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile-scala</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
