--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,27 @@
             <version>2.11.8</version>
         </dependency>
 
+        <!--<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.6.5</version>
+            <scope>provided</scope>
+        </dependency>-->
+
         <dependency>
             <groupId>com.cloudera.oryx</groupId>
             <artifactId>oryx-api</artifactId>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jackson-annotations</artifactId>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jackson-databind</artifactId>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                </exclusion>
+            </exclusions>
             <version>2.4.1</version>
         </dependency>
 
@@ -57,6 +74,16 @@
             <groupId>com.cloudera.oryx</groupId>
             <artifactId>oryx-common</artifactId>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jackson-core</artifactId>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jackson-databind</artifactId>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                </exclusion>
+            </exclusions>
             <version>2.4.1</version>
         </dependency>
 
@@ -71,6 +98,12 @@
             <groupId>com.cloudera.oryx</groupId>
             <artifactId>oryx-app-serving</artifactId>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jackson-databind</artifactId>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                </exclusion>
+            </exclusions>
             <version>2.4.1</version>
         </dependency>
 
@@ -149,6 +182,43 @@
                             <goal>add-source</goal>
                             <goal>testCompile</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>shade</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>com.michaelxu.oryx:*</include>
+                                </includes>
+                            </artifactSet>
+                            <relocations>
+                                <relocation>
+                                    <pattern>org.jpmml</pattern>
+                                    <shadedPattern>oryx.org.jpmml</shadedPattern>
+                                    <includes>
+                                        <include>org.jpmml.**</include>
+                                    </includes>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.dmg</pattern>
+                                    <shadedPattern>oryx.org.dmg</shadedPattern>
+                                    <includes>
+                                        <include>org.dmg.**</include>
+                                    </includes>
+                                </relocation>
+                            </relocations>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
