--- a/pom.xml
+++ b/pom.xml
@@ -139,12 +139,31 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>jpmml-sparkml</artifactId>
+            <version>${jpmml.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>pmml-evaluator</artifactId>
+            <version>1.3.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jpmml</groupId>
+            <artifactId>jpmml-evaluator-spark</artifactId>
+            <version>1.1-SNAPSHOT-spark-2.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spark.version>2.1.1</spark.version>
         <java.version>1.8</java.version>
+        <jpmml.version>1.2.4</jpmml.version>
     </properties>
 
     <build>
@@ -202,6 +221,16 @@
                                     <include>com.michaelxu.oryx:*</include>
                                 </includes>
                             </artifactSet>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                             <relocations>
                                 <relocation>
                                     <pattern>org.jpmml</pattern>
