--- a/src/main/resources/oryx-lr.conf
+++ b/src/main/resources/oryx-lr.conf
@@ -85,12 +85,12 @@ oryx {
     }
   }
   input-schema = {
-    num-features = 8
+    num-features = 54
+    categorical-features = []
   }
-
   lr {
     hyperparams {
-      "numClasses" = 7
+      numClasses = 7
     }
   }
 }
